--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 .navbar {
   padding: 2rem;
-  background-color: #c564be;
+  background-color: #01579B;
 }
 
 .navbar-collapse {
@@ -23,20 +23,20 @@ section {
 h1 {
   font-size: 2.5rem;
   font-family: 'Rubik Dirt', cursive;
-  color:#f4a7ad;
+  color:#1B4F72;
 }
 h2{
-  color: #9061c2;
+  color: white;
 }
 
 .seccion-oscura {
   color: white;
-  background-color: #1b1b32;
+  background-color:  #0277BD ;
 }
 
 .seccion-clara {
-  color: black;
-  background-color: white;
+  color: #1B4F72;
+  background-color: #ffff;
 }
 
 .seccion-titulo {
@@ -47,7 +47,7 @@ h2{
 
 .seccion-descripcion {
   font-size: 1.2rem;
-  color: #584e4e;
+  color:  #1B4F72;
 }
 
 .seccion-texto {
@@ -60,7 +60,7 @@ h2{
 }
 
 .texto-negro {
-  color: black;
+  color: #039BE5;
 }
 
 .texto-blanco {
@@ -87,7 +87,7 @@ h2{
 
 .hero-principal h2 {
   font-size: 1.5rem;
-  color: #615151;
+  color:  #1B4F72;
 }
 
 /* Sobre mi */
@@ -120,7 +120,7 @@ h2{
 
 .experiencia .columna:hover {
   color: white;
-  background-color: #1b1b32;
+  background-color: #1B4F72;
 }
 
 .experiencia i {
@@ -208,9 +208,7 @@ h2{
 
 /* Testimonios */
 
-.testimonios {
-  padding: 40px 40px 80px 40px;
-}
+
 
 .testimonios .carousel {
   max-width: 800px;
@@ -270,7 +268,7 @@ h2{
 
 .contacto .rectangulo {
   margin-top: -5rem;
-  background-color: rgb(0, 100, 16);
+  background-color: #1B4F72;
   border-radius: 10px;
   box-shadow: 0px 1px 4px 1px white;
 }
